func.template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Transform: AWS::Serverless-2016-10-31
Description: 'Lambda and API Gateway resources for Virtual Slide Viewer'
Parameters:
  VpcId:
    Type: String
    Description: 'VPC ID to use for DynamoDB gateway endpoint'
  RouteTableId:
    Type: String
    Description: 'Route Table ID to use for DynamoDB gateway endpoint'
  Subnets:
    Type: CommaDelimitedList
    Description: 'The list of Subnet IDs, for at least two Availability Zones in the region in your Virtual Private Cloud (VPC)'
  FileSystem:
    Type: String
    Description: File system id of EfsFileSystem
  EfsSecurityGroup:
    Type: String
    Description: ID of the EFS security group
  AccessPointId:
    Type: String
    Description: ID of AccessPoint
  AccessPointArn:
    Type: String
    Description: ARN of AccessPoint
  EnvType:
    Type: String
    Description: Runtime environment type.
    Default: prod
  TableName:
    Type: String
    Description: Slide table for image metadata.
  DataSyncTaskArn:
    Type: String
    Description: ARN of the DataSync task for image transfers from scanner to EFS
  ImagesBucketName:
    Type: String
    Description: A legal bucket name.  Must not exist.

Globals:
  Api:
    OpenApiVersion: '3.0.3'
  Function:
    Environment:
      Variables:
        ENV_TYPE: !Ref EnvType

Resources:
  LambdaSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: VSV security group for Lambda
      VpcId: !Ref VpcId
      SecurityGroupEgress:
        - DestinationSecurityGroupId: !Ref EfsSecurityGroup
          IpProtocol: tcp
          FromPort: 2049
          ToPort: 2049
          Description: 'Allow access to VSV filesystem on EFS.'
  EfsFromLambdaIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref EfsSecurityGroup
      SourceSecurityGroupId: !Ref LambdaSecurityGroup
      IpProtocol: tcp
      FromPort: 2049
      ToPort: 2049
      Description: 'Allow access to VSV filesystem on EFS.'
  ImageRequest:
    Type: AWS::Serverless::Function
    Properties:
      CodeUri: functions/ImageRequest
      Handler: imagerequest.lambda_handler
      Runtime: python3.8
      Timeout: 15
      MemorySize: 640
      Environment:
        Variables:
          IMAGES_PATH: !Sub '/mnt/${FileSystem}'
      Layers:
        - !Ref OpenSlide
        - !Ref PillowSIMD
      Policies:
        - EFSWriteAccessPolicy:
            FileSystem: !Ref FileSystem
            AccessPoint: !Ref AccessPointId
      VpcConfig:
        SecurityGroupIds:
          - Ref: LambdaSecurityGroup
        SubnetIds: !Ref Subnets
      FileSystemConfigs:
          - Arn: !Ref AccessPointArn
            LocalMountPath: !Sub '/mnt/${FileSystem}'
      Events:
        ImagesApi:
          Type: Api
          Properties:
            RestApiId: !Ref ImagesApi
            Path: /DeepZoom/{imagePath+}
            Method: GET
  ImportMetadata:
    Type: AWS::Serverless::Function
    Properties:
      CodeUri: functions/ImportSlide
      Handler: importmetadata.lambda_handler
      Runtime: python3.8
      Timeout: 120
      MemorySize: 1536
      AutoPublishAlias: live
      EventInvokeConfig:
        MaximumEventAgeInSeconds: 180
        MaximumRetryAttempts: 0
      Environment:
        Variables:
          IMAGES_PATH: !Sub '/mnt/${FileSystem}'
          TABLE_NAME: !Ref TableName
      Layers:
        - !Ref OpenSlide
        - !Ref PillowSIMD
        - !Ref libdmtx
      Policies:
        - EFSWriteAccessPolicy:
            FileSystem: !Ref FileSystem
            AccessPoint: !Ref AccessPointId
        - DynamoDBWritePolicy:
            TableName: !Ref TableName
      VpcConfig:
        SecurityGroupIds:
          - Ref: LambdaSecurityGroup
        SubnetIds: !Ref Subnets
      FileSystemConfigs:
        - Arn: !Ref AccessPointArn
          LocalMountPath: !Sub '/mnt/${FileSystem}'
  CheckFileTransfer:
    Type: AWS::Serverless::Function
    Properties:
      CodeUri: functions/ImportSlide
      Handler: checkfiletransfer.lambda_handler
      Runtime: python3.8
      Timeout: 3
      MemorySize: 128
      AutoPublishAlias: live
      EventInvokeConfig:
        MaximumEventAgeInSeconds: 180
        MaximumRetryAttempts: 0
      Environment:
        Variables:
          IMAGES_PATH: !Sub '/mnt/${FileSystem}'
      Policies:
        - EFSWriteAccessPolicy:
            FileSystem: !Ref FileSystem
            AccessPoint: !Ref AccessPointId
      VpcConfig:
        SecurityGroupIds:
          - Ref: LambdaSecurityGroup
        SubnetIds: !Ref Subnets
      FileSystemConfigs:
          - Arn: !Ref AccessPointArn
            LocalMountPath: !Sub '/mnt/${FileSystem}'
  ImportSlide:
    Type: AWS::Serverless::Function
    DependsOn:
      - CheckFileTransfer
      - ImportMetadata
    Properties:
      CodeUri: functions/ImportSlide
      Handler: importslide.lambda_handler
      Runtime: python3.8
      Timeout: 29
      MemorySize: 256
      EventInvokeConfig:
        MaximumEventAgeInSeconds: 180
        MaximumRetryAttempts: 0
      Environment:
        Variables:
          TABLE_NAME: !Ref TableName
          CHECK_FILE_FUNCTION: !Ref CheckFileTransfer.Version
          METADATA_FUNCTION: !Ref ImportMetadata.Version
          TASK_ARN: !Ref DataSyncTaskArn
      Policies:
        - LambdaInvokePolicy:
            FunctionName: !Ref ImportMetadata
        - LambdaInvokePolicy:
            FunctionName: !Ref CheckFileTransfer
        - DynamoDBReadPolicy:
            TableName: !Ref TableName
        - Statement:
            - Effect: Allow
              Action:
                - datasync:DescribeTask
                - datasync:StartTaskExecution
              Resource: !Ref DataSyncTaskArn
        - Statement:
            - Effect: Allow
              Action: ec2:DescribeNetworkInterfaces
              Resource: '*'
      Events:
        ImagesApi:
          Type: Api
          Properties:
            RestApiId: !Ref ImagesApi
            Path: /ImportSlide
            Method: POST
  DeleteImageAsync:
    Type: AWS::Serverless::Function
    Properties:
      CodeUri: functions/RemoveImages
      Handler: deleteimageasync.lambda_handler
      Runtime: python3.8
      Timeout: 900
      AutoPublishAlias: live
      Environment:
        Variables:
          IMAGES_PATH: !Sub '/mnt/${FileSystem}'
      Policies:
        - EFSWriteAccessPolicy:
            FileSystem: !Ref FileSystem
            AccessPoint: !Ref AccessPointId
      VpcConfig:
        SecurityGroupIds:
          - Ref: LambdaSecurityGroup
        SubnetIds: !Ref Subnets
      FileSystemConfigs:
          - Arn: !Ref AccessPointArn
            LocalMountPath: !Sub '/mnt/${FileSystem}'
  TransferImageAsync:
    Type: AWS::Serverless::Function
    Properties:
      CodeUri: functions/RemoveImages
      Handler: transferimageasync.lambda_handler
      Runtime: python3.8
      Timeout: 900
      MemorySize: 1536
      AutoPublishAlias: live
      Environment:
        Variables:
          TABLE_NAME: !Ref TableName
          IMAGES_PATH: !Sub '/mnt/${FileSystem}'
          IMAGES_BUCKET: !Ref ImagesBucketName
      Policies:
        - EFSWriteAccessPolicy:
            FileSystem: !Ref FileSystem
            AccessPoint: !Ref AccessPointId
        - DynamoDBWritePolicy:
            TableName: !Ref TableName
        - S3WritePolicy:
            BucketName: !Ref ImagesBucketName
      VpcConfig:
        SecurityGroupIds:
          - Ref: LambdaSecurityGroup
        SubnetIds: !Ref Subnets
      FileSystemConfigs:
          - Arn: !Ref AccessPointArn
            LocalMountPath: !Sub '/mnt/${FileSystem}'
  RemoveImages:
    Type: AWS::Serverless::Function
    DependsOn:
      - DeleteImageAsync
      - TransferImageAsync
    Properties:
      CodeUri: functions/RemoveImages
      Handler: removeimages.lambda_handler
      Runtime: python3.8
      Timeout: 15
      Environment:
        Variables:
          TRANSFER_FUNCTION: !Ref TransferImageAsync.Version
          DELETE_FUNCTION: !Ref DeleteImageAsync.Version
      Policies:
        - LambdaInvokePolicy:
            FunctionName: !Ref TransferImageAsync
        - LambdaInvokePolicy:
            FunctionName: !Ref DeleteImageAsync
      Events:
        ImagesApi:
          Type: Api
          Properties:
            RestApiId: !Ref ImagesApi
            Path: /RemoveImages
            Method: DELETE
  DynamoDbEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal: '*'
            Action:
              - 'dynamodb:PutItem'
              - 'dynamodb:UpdateItem'
              - 'dynamodb:Query'
            Resource:
              - !Sub 'arn:${AWS::Partition}:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${TableName}'
              - !Sub 'arn:${AWS::Partition}:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${TableName}/index/*'
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.dynamodb'
      VpcEndpointType: Gateway
      RouteTableIds:
        - !Ref RouteTableId
      VpcId: !Ref VpcId
  LambdaToDynamoDbEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref LambdaSecurityGroup
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      DestinationPrefixListId: pl-4ca54025
      Description: 'Allow access to DynamoDB gateway VPC endpoint.'
  S3Endpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal: '*'
            Action:
              - 's3:PutObject'
            Resource:
              - !Sub 'arn:${AWS::Partition}:s3:::${ImagesBucketName}/*'
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.s3'
      VpcEndpointType: Gateway
      RouteTableIds:
        - !Ref RouteTableId
      VpcId: !Ref VpcId
  LambdaToS3Egress:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref LambdaSecurityGroup
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      DestinationPrefixListId: pl-7ba54012
      Description: 'Allow access to S3 gateway VPC endpoint.'
  OpenSlide:
    Type: AWS::Serverless::LayerVersion
    Properties:
      ContentUri: layers/openslide
      CompatibleRuntimes:
        - python3.8
    Metadata:
      BuildMethod: makefile
  PillowSIMD:
    Type: AWS::Serverless::LayerVersion
    Properties:
      ContentUri: layers/pillow-simd
      CompatibleRuntimes:
        - python3.8
    Metadata:
      BuildMethod: makefile
  libdmtx:
    Type: AWS::Serverless::LayerVersion
    Properties:
      ContentUri: layers/libdmtx
      CompatibleRuntimes:
        - python3.8
    Metadata:
      BuildMethod: makefile
  ImagesApi:
    Type: AWS::Serverless::Api
    Properties:
      StageName: !Ref EnvType
      BinaryMediaTypes: ['image/*']
      EndpointConfiguration:
        Type: REGIONAL
Outputs:
  ApiId:
    Description: Api id of ImagesApi
    Value: !Ref ImagesApi
  ApiDomain:
    Description: FQDN of ImagesApi
    Value: !Sub ${ImagesApi}.execute-api.${AWS::Region}.${AWS::URLSuffix}
  ApiUrl:
    Description: URL of your API endpoint
    Value: !Sub https://${ImagesApi}.execute-api.${AWS::Region}.${AWS::URLSuffix}/${EnvType}/
